force-app/main/default/objects/ATT_EXP__Attachment_Version__c/ATT_EXP__Attachment_Version__c.object-meta.xml
<CustomObject>
    <description>Version information of the Attachments are stored in this object</description>
    <label>Attachment Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachment Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>