force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__Attachment__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Attachment__c</fullName>
    <description>Attachment for which this Version is created.</description>
    <label>Attachment</label>
    <referenceTo>ATT_EXP__Attachment__c</referenceTo>
    <relationshipLabel>Attachment Versions</relationshipLabel>
    <relationshipName>Attachment_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>