force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__Bytes__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Bytes__c</fullName>
    <description>Number of bytes of file size.</description>
    <label>Bytes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>