force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__File__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__File__c</fullName>
    <description>Full path and name of the file how it is stored on Storage server.</description>
    <label>File</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>