force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__Size__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Size__c</fullName>
    <description>Human readable file size.</description>
    <label>Size</label>
    <length>32</length>
    <type>Text</type>
</CustomField>