force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__Status__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Status__c</fullName>
    <description>This field specifies current status of the Attachment version whether the version is being uploaded or available. Also when a Attachment is archived all it&apos;s version records are marked as &quot;Archived&quot;.</description>
    <inlineHelpText>This field specifies current status of the Attachment version whether the version is being uploaded or available. Also when a Attachment is archived all it&apos;s version records are marked as &quot;Archived&quot;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>