force-app/main/default/objects/ATT_EXP__Attachment_Version__c/fields/ATT_EXP__Version__c.field-meta.xml
<CustomField>
    <fullName>ATT_EXP__Version__c</fullName>
    <description>Version Id of the current version using which it can be identified in the Attachment</description>
    <label>Version</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>